; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libvita2d/source/extr_vita2d_texture.c_vita2d_draw_texture_tint_part.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libvita2d/source/extr_vita2d_texture.c_vita2d_draw_texture_tint_part.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vita2d_draw_texture_tint_part(i32* %0, float %1, float %2, float %3, float %4, float %5, float %6, i32 %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca float, align 4
  %11 = alloca float, align 4
  %12 = alloca float, align 4
  %13 = alloca float, align 4
  %14 = alloca float, align 4
  %15 = alloca float, align 4
  %16 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store float %1, float* %10, align 4
  store float %2, float* %11, align 4
  store float %3, float* %12, align 4
  store float %4, float* %13, align 4
  store float %5, float* %14, align 4
  store float %6, float* %15, align 4
  store i32 %7, i32* %16, align 4
  %17 = call i32 (...) @set_texture_tint_program()
  %18 = call i32 (...) @set_texture_wvp_uniform()
  %19 = load i32, i32* %16, align 4
  %20 = call i32 @set_texture_tint_color_uniform(i32 %19)
  %21 = load i32*, i32** %9, align 8
  %22 = load float, float* %10, align 4
  %23 = load float, float* %11, align 4
  %24 = load float, float* %12, align 4
  %25 = load float, float* %13, align 4
  %26 = load float, float* %14, align 4
  %27 = load float, float* %15, align 4
  %28 = call i32 @draw_texture_part_generic(i32* %21, float %22, float %23, float %24, float %25, float %26, float %27)
  ret void
}

declare dso_local i32 @set_texture_tint_program(...) #1

declare dso_local i32 @set_texture_wvp_uniform(...) #1

declare dso_local i32 @set_texture_tint_color_uniform(i32) #1

declare dso_local i32 @draw_texture_part_generic(i32*, float, float, float, float, float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
